--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ click==8.1.8
 dataclasses-json==0.6.7
 deepgram-sdk==0.2.4
 deprecation==2.1.0
+dnspython==2.7.0
+email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.11
 frozenlist==1.5.0
@@ -22,8 +24,10 @@ google-api-core==2.24.1
 google-api-python-client==2.163.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
+google-genai==1.4.0
 google-generativeai==0.8.4
 googleapis-common-protos==1.69.0
+greenlet==3.1.1
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
@@ -34,8 +38,11 @@ idna==3.10
 marshmallow==3.26.1
 multidict==6.1.0
 mypy-extensions==1.0.0
+numpy==2.2.3
 packaging==24.2
+passlib==1.7.4
 pdf2image==1.17.0
+pgvector==0.3.6
 pillow==11.1.0
 propcache==0.3.0
 proto-plus==1.26.0
@@ -52,6 +59,7 @@ python-multipart==0.0.20
 requests==2.32.3
 rsa==4.9
 sniffio==1.3.1
+SQLAlchemy==2.0.38
 starlette==0.46.0
 tqdm==4.67.1
 typing-inspect==0.9.0
@@ -59,5 +67,6 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
-websockets==10.1
+vector==1.6.1
+websockets==14.2
 yarl==1.18.3
