--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
 async-timeout==5.0.1
+asyncpg==0.30.0
 attrs==25.1.0
 cachetools==5.5.2
 certifi==2025.1.31
